# MGL

./: .clangd  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: build_ios.yml
MGL.xcodeproj/: project.pbxproj
MGL.xcodeproj/project.xcworkspace/xcuserdata/congcq.xcuserdatad/: UserInterfaceState.xcuserstate
MGL.xcodeproj/xcuserdata/congcq.xcuserdatad/xcschemes/: xcschememanagement.plist
MGL/include/: MGLContext.h  MGLRenderer.h  draw_command.h  error.h  glm_context.h  glm_limits.h  glm_params.h  hash_table.h  mgl.h  mgl_extensions.h
MGL/src/: MGLRenderer.m  MGLTextures.m  buffers.c  compute.c  draw_buffers.c  draw_command.c  error.c  fence.c  framebuffers.c  get.c  gl_core.c  gl_es.c  glm_context.c  glm_params.c  hash_table.m  ios_mach_vm.h  mgl_funcs_to_be_implemented.c  mgl_safety.h  non_core_unimplemented.c  pixel_utils.c  program.c  rendering.c  samplers.c  shaders.c  state.c  tex_param.c  textures.c  uniforms.c  vertex_arrays.c  vertex_buffers.c
